Adding support for TLS 1.3 for NtbTLS is good (in future).
Description
Description
Revisions and Commits
Revisions and Commits
| rT Not Too Bad TLS | |||
| rTe5ab55354633 Add the extention to show supported versions. | |||
| rT958295cfdd2b Fix version checks for supporting TLS 1.3. | |||
| rT9c8bddef1776 Update struct _ntbtls_context_s to allow TLS 1.3. | |||
| rTf62f6d532df9 Add constants for TLS 1.3. | |||