Add constants for TLS 1.3.

* src/ciphersuites.h (TLS_AES_128_GCM_SHA256): New.
(TLS_AES_256_GCM_SHA384): New.
* src/ntbtls-int.h (TLS_MINOR_VERSION_4): New.
(TLS_MAX_MINOR_VERSION): Update.
(TLS_EXT_SUPPORTED_VERSIONS, TLS_EXT_KEY_SHARE): New.
* src/ciphersuites.c (ciphersuite_preference): Update.
(ciphersuite_definitions): Update.

--

GnuPG-bug-id: 6967
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>